# ninja_firmware

./: Cargo.toml  README.md
.cargo/: config.toml
src/: config_class.rs  eeprom.rs  keys.rs  main.rs  right_side.rs  secondary_side.rs
src/keyboard/: conf.rs  key.rs  keyboard.rs  mod.rs
src/keyboard/models/: corne.rs  mod.rs  ninja1.rs  ninja2.rs
